--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a href="#">Scratch動畫及遊戲創作程式設計</a> 
             <ul>
               <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch3.X</a></li>
-              <li><a href="/student/lessons2/1">基礎程式設計(一)：使用Scratch3.X</a></li>              
+              <li><a href="/student/lessons2/1">基礎程式設計：使用Scratch3.X</a></li>              
             </ul>         
           
           </li>
