--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,11 @@ Licence URI: http://www.os-templates.com/template-terms
             </ul>         
           
           </li>
+          <li><a href="#">Bridge(Scratch to Python)銜接課程</a>
+            <ul>      
+              <li><a href="#">※進階程式設計：使用Python3(研發中)</a></li>                 
+            </ul>           
+          </li>          
           <li><a href="#">VPhysics(Python)物理模擬程式設計</a>
             <ul>
               <li><a href="/student/lessons/B">南港高中通識課程：使用Python2</a></li>            
