--- a/templates/base.html
+++ b/templates/base.html
@@ -37,9 +37,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a href="#">Scratch動畫及遊戲創作程式設計</a> 
             <ul>
               <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch3.X</a></li>
-              <!--
               <li><a href="/student/lessons2/1">※基礎程式設計：使用Scratch3.X</a></li>              
-              -->
             </ul>         
           
           </li>
@@ -83,7 +81,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>           
           <li><a href="#">Robot機器人(開放硬體)程式設計</a>
             <ul>
-               <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>
+               <!--<li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>-->
                <li><a href="https://hackmd.io/c/BkoDkoL-E/https%3A%2F%2Fhackmd.io%2Fs%2FHyKsksUZE" target="_blank">南港高中特色課程：使用RaspberryPi</a></li>
               </ul>           
           </li>           
