--- a/templates/student/lessons2.html
+++ b/templates/student/lessons2.html
@@ -23,7 +23,7 @@
     </div>
     <hr>
     <div class="row">
-    <div class="col-md-6"><!--本課程請搭配翰林版資訊科技課本使用--></div>
+    <div class="col-md-6"><a href="https://hackmd.io/uLkmd3MbSBWTu8IYl1H9hA" target="_blank">Ubuntu安裝步驟</a><!--本課程請搭配翰林版資訊科技課本使用--></div>
     <div class="col-md-6" align=right><a href="https://scratch.mit.edu/projects/editor/" target="_blank"><img src="/static/images/online.png"></a></div></p>
     </div>
 {% endif %}
