--- a/templates/student/lessons2.html
+++ b/templates/student/lessons2.html
@@ -3,10 +3,10 @@
 {% block content %}
 {% if subject_id == "1" %}
     <div class="sectiontitle">
-      <h1 class="heading"> <i class="fa fa-universal-access" aria-hidden="true"></i> {{lesson_list.0.0}}</h6>
+      <h1 class="heading"> <i class="fa fa-universal-access" aria-hidden="true"></i> {{lesson_list.0.0}}</h6>何榮桂、高慧君著 翰林出版
     </div>
     <hr>
-    <a href="https://studio.code.org/hoc/1" target="_blank">1小時學程式設計(Hour of Code)：經典迷宮</a>
+    <a href="https://studio.code.org/hoc/1" target="_blank">1小時學程式設計(Hour of Code)：經典迷宮</a>(Code.org製作)
     <BR><BR>
     <div class="row">
       {% for unit in lesson_list.0.1 %}
