--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -30,7 +30,7 @@ function MM_swapImage() { //v3.0
 {% block content %}
 {% if subject_id == "A" %}
     <p><a href="/static/files/programming_scratch.pdf" target=_blank role="button" class="btn btn-info">教材簡介</a></p>
-    <img style="margin-left:20px;" src="/static/images/banner_scratch.png">
+    <img style="margin-left:20px; vertical-align:text-bottom" src="/static/images/scratch/banner.png"> 高慧君著 松崗出版
 
 		<table style="border:0px; width:900px;">
 		<tr>
