--- a/templates/student/progress.html
+++ b/templates/student/progress.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load tag %}
 {% block content %}
+{{lesson_list}}--
         <table class="table">
             <tr>
                 <Td></Td>
