--- a/templates/student/plant_show.html
+++ b/templates/student/plant_show.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<a href="/student/plant/photo/show" role="btn" class="btn btn-success">定時攝影</a> <a href="/student/plant/light/show" role="btn" class="btn btn-success">光度感測</a>
 <h3>
 這個網頁將會記錄南港高中發展智慧植栽程式設計教材的過程。
 <!--
