--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>           
           <li><a href="#">Robot機器人(開放硬體)程式設計</a>
             <ul>
-               <!--<li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>-->
+               <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>
                <li><a href="https://hackmd.io/c/BkoDkoL-E/https%3A%2F%2Fhackmd.io%2Fs%2FHyKsksUZE" target="_blank">南港高中特色課程：使用RaspberryPi</a></li>
               </ul>           
           </li>           
