--- a/templates/student/lessons2.html
+++ b/templates/student/lessons2.html
@@ -25,6 +25,7 @@
     <div class="row">
     <div class="col-md-6">
         <i class="fa fa-folder-open-o" aria-hidden="true"></i><a href="https://hackmd.io/s/Bk7UhNDu4" target="_blank">Ubuntu安裝步驟</a><BR>
+        <i class="fa fa-folder-open-o" aria-hidden="true"></i><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/r1nDsjWWr" target="_blank">Docker架站步驟</a><BR>
         <i class="fa fa-folder-open-o" aria-hidden="true"></i><a href="https://hackmd.io/s/ByHsQshO4" target="_blank">教學網站使用說明</a><BR>
     </div>
     <div class="col-md-6" align=right><a href="https://scratch.mit.edu/projects/editor/" target="_blank"><img src="/static/images/online.png"></a></div></p>
