--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>          
           <li><a href="#">VPhysics(Python)物理模擬程式設計</a>
             <ul>
+              <li><a href="http://phys5.ncue.edu.tw/physedu/article/20-1/2.pdf" target="_blank">	VPhysics跨領域課程設計-物理教育學刊(2019)</a></li>			  
               <li><a href="/student/lessons/B">南港高中通識課程：使用Python2</a></li>            
               <li><a href="/student/lessons/E">南港高中通識課程：使用Python3</a></li>                 
               <li><a href="/student/lessons/D">建國中學特色課程：使用Python3</a></li>
@@ -56,7 +57,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>          
           <li><a href="#">Django(Python)網站開發程式設計</a>
             <ul>
-              <li><A href="/student/lessons/G">南港高中特色課程：使用Python3</A></li>
+              <li><A href="http://joc.url.tw" target="_blank">南港高中特色課程：使用Python3</A></li>
             </ul>          
           </li>   
           <li><a href="#">Euler(Python)數學解題程式設計</a>
@@ -84,6 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
                <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>
                <li><a href="https://hackmd.io/c/BkoDkoL-E/https%3A%2F%2Fhackmd.io%2Fs%2FHyKsksUZE" target="_blank">南港高中特色課程：使用RaspberryPi</a></li>
                <li><a href="https://hackmd.io/c/BkRE8iUzI/https%3A%2F%2Fhackmd.io%2Fs%2FrJxK8iUM8" target="_blank">南港高中特色課程：使用JetBot</a></li>               
+               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/By8ZOj-DI" target="_blank">南港高中特色課程：使用Rabboni</a></li>               
               </ul>           
           </li>           
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
