--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -35,21 +35,21 @@ function MM_swapImage() { //v3.0
 		<table style="border:0px; width:900px;">
 		<tr>
 		<td>
-    {% if not user.is_authenticated %}
+    {% if false %}
 		  <img name="menu01" src="/static/images/scratch/lesson01L.png">
     {% else %}	     
 			<a onmouseover="MM_swapImage('menu01','','/static/images/scratch/lesson012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A001"><img name="menu01" src="/static/images/scratch/lesson01.png"></a>
     {% endif %}
       </td>
 		<td>
- 		{% if not user|has_group:"teacher" and lock < 2 %}
+ 		{% if false %}
 		  <img name="menu02" src="/static/images/scratch/lesson02L.png">
     {% else %}	     
    		<a onmouseover="MM_swapImage('menu02','','/static/images/scratch/lesson022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A002"><img name="menu02" src="/static/images/scratch/lesson02.png"></a>
 		{% endif %}
       </td>
 		<td>
- 		{% if not user|has_group:"teacher" and lock < 3 %}
+ 		{% if false %}
 		  <img name="menu03" src="/static/images/scratch/lesson03L.png">
     {% else %}	        
 			<a onmouseover="MM_swapImage('menu03','','/static/images/scratch/lesson032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A003"><img name="menu03" src="/static/images/scratch/lesson03.png"></a>
@@ -59,20 +59,20 @@ function MM_swapImage() { //v3.0
     </tr>      
     <tr>
 		<td>
- 		{% if not user|has_group:"teacher" and lock < 5 %}
+ 		{% if false %}
 		  <img name="menu04" src="/static/images/scratch/lesson04L.png">
     {% else %}      
 			<a onmouseover="MM_swapImage('menu04','','/static/images/scratch/lesson042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A004"><img name="menu04" src="/static/images/scratch/lesson04.png"></a>
     {% endif %}
     <td>
- 		{% if not user|has_group:"teacher" and lock < 7 %}
+ 		{% if false %}
 		  <img name="menu05" src="/static/images/scratch/lesson05L.png">
     {% else %}      
 			<a onmouseover="MM_swapImage('menu05','','/static/images/scratch/lesson052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A005"><img name="menu05" src="/static/images/scratch/lesson05.png"></a>
     {% endif %}
     </td>
 		<td>
- 		{% if not user|has_group:"teacher" and lock < 9 %}
+ 		{% if false %}
 		  <img name="menu06" src="/static/images/scratch/lesson06L.png">
     {% else %}      
 			<a onmouseover="MM_swapImage('menu06','','/static/images/scratch/lesson062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A006"><img name="menu06" src="/static/images/scratch/lesson06.png"></a>
@@ -81,21 +81,21 @@ function MM_swapImage() { //v3.0
 		</tr>
 		<tr>      
 		<td>
- 		{% if not user|has_group:"teacher" and lock < 11 %}
+ 		{% if false %}
 		  <img name="menu07" src="/static/images/scratch/lesson07L.png">
     {% else %}
 			<a onmouseover="MM_swapImage('menu07','','/static/images/scratch/lesson072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A007"><img name="menu07" src="/static/images/scratch/lesson07.png"></a>
 		{% endif %}
     </td>
 		<td>
- 		{% if not user|has_group:"teacher" and lock < 13 %}
+ 		{% if false %}
 		  <img name="menu08" src="/static/images/scratch/lesson08L.png">
     {% else %}      
 			<a onmouseover="MM_swapImage('menu08','','/static/images/scratch/lesson082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A008"><img name="menu08" src="/static/images/scratch/lesson08.png"></a>
 		{% endif %}
     </td>		
 		<td>
-    {% if not user|has_group:"teacher" and lock < 14 %}
+    {% if false %}
 		  <img name="menu09" src="/static/images/scratch/lesson09L.png">
     {% else %}     
 			<a onmouseover="MM_swapImage('menu09','','/static/images/scratch/lesson092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A009"><img name="menu09" src="/static/images/scratch/lesson09.png"></a>
@@ -104,21 +104,21 @@ function MM_swapImage() { //v3.0
 		</tr>
 		<tr>      
 		<td>
-    {% if not user|has_group:"teacher" and lock < 14 %}
+    {% if false %}
 		  <img name="menu10" src="/static/images/scratch/lesson093L.png">
     {% else %}       
 			<a onmouseover="MM_swapImage('menu10','','/static/images/scratch/lesson094.png',1);" onmouseout=MM_swapImgRestore() href="/student/exam/"><img name="menu10" src="/static/images/scratch/lesson093.png"></a>
 		{% endif %}
     </td>
 		<td>
-    {% if not user|has_group:"teacher" and lock < 15 %}
+    {% if false %}
 		  <img name="menu11" src="/static/images/scratch/lesson10L.png">
     {% else %}       
 			<a onmouseover="MM_swapImage('menu11','','/static/images/scratch/lesson102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A010"><img name="menu11" src="/static/images/scratch/lesson10.png"></a>
 		{% endif %}
     </td>
 		<td>
-    {% if not user|has_group:"teacher" and lock < 16 %}
+    {% if false %}
 		  <img name="menu12" src="/static/images/scratch/lesson11L.png">
     {% else %}       
 			<a onmouseover="MM_swapImage('menu12','','/static/images/scratch/lesson112.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A011"><img name="menu12" src="/static/images/scratch/lesson11.png"></a>
