--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@ Licence URI: http://www.os-templates.com/template-terms
             <ul>
               <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch3.X</a></li>
               <li><a href="/student/lessons2/1">※基礎程式設計：使用Scratch3.X</a></li>              
+              <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/BkY-8Jb5L/https%3A%2F%2Fhackmd.io%2F%40h3BSPiUpQhCVyCHgJAWWHg%2FHk0I8kW5U">ScratchX+Rabboni智慧物聯創意秀</a></li>                     
             </ul>         
           
           </li>
