--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -33,6 +33,8 @@
     <Tr><td>教育部高中資訊學科中心種子教師(2005.2~2015.12)</td></Tr>           
     <Tr><td>教育部高中資訊科技概論教科書審定委員(2006.8~2017.12)</td></Tr>    	 		
     <Tr><td>臺北市自由軟體桌面應用推動及發展小組輔導員(2008.4~2016.12)</td></Tr> 	
+    <Tr><td>臺北市智慧教育輔導小組高中組輔導員(2019.8~迄今)</td></Tr> 
+    <Tr><td>108新課綱翰林版國中資訊科技教科書共同作者(2017.8~迄今)</td></Tr>     	    
   </table>
           </td></tr></table>
         </p>                    
@@ -62,6 +64,7 @@
             <table class="table">
         <tr><td width="200px"><img src="/static/images/about/book3.png" width="180px"></td><td>
         <Table class="table" style="width:100%">     
+  <tr><td>動動手玩積木遊戲─使用Scratch 2.x，國小用書，松崗。2017出版。</td></tr>          
 	<tr><td>動動手玩積木遊戲─使用Scratch 2.x，國小用書，松崗。2017出版。</td></tr>
 	<tr><td>趣學Scratch─教孩子學編程。簡體中文。人民郵電出版社。2016出版。</td></tr>  
 	<tr><td>程式設計輕鬆學─使用Scratch 2.x。松崗。2016出版。</td></tr>
@@ -76,8 +79,9 @@
     <h5 class="card-title">榮譽</h5>
     <p class="card-text">
                         <table class="table">
-        <tr><td width="300px"><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
+        <tr><td width="300px"><img src="/static/images/alumni.jpg" width="280px"><BR><BR><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
 		<table class="table">
+  <tr><td><a href="https://www.coe.ntnu.edu.tw/index.php/2020/08/20/announcement_2020_education100">國立臺灣師範大學2020教育學院社會公益類百大亮點校友</a></td></tr>         
   <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類優選：跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
 	<tr><td>臺北市106年度優良教師</td></tr>      
 	<tr><td>指導學生參加臺北市104年度機器人競賽榮獲高中職創意組第1,3名</td></tr>	
