--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,7 @@ Licence URI: http://www.os-templates.com/template-terms
                <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>
                <li><a href="https://hackmd.io/c/BkoDkoL-E/https%3A%2F%2Fhackmd.io%2Fs%2FHyKsksUZE" target="_blank">南港高中特色課程：使用RaspberryPi</a></li>
                <li><a href="https://hackmd.io/c/BkRE8iUzI/https%3A%2F%2Fhackmd.io%2Fs%2FrJxK8iUM8" target="_blank">南港高中特色課程：使用JetBot</a></li> 
+               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO/https%3A%2F%2Fhackmd.io%2F%40twzO0JCBRaa_Tuaxdh-UBA%2FSy4ZkbOJO" target="_blank">智慧物聯成果展</a></li> 
                <!--              
                <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/By8ZOj-DI" target="_blank">南港高中特色課程：使用Rabboni</a></li>  
                -->
