--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -21,6 +21,15 @@
     </p>
   </div>
   <div class="card-body">
+    <h5 class="card-title">生活點滴</h5>
+    <p class="card-text">
+                  <table class="table">
+        <tr><td width="800"><img src="/static/images/about/zoo.jpg" width="800"><BR>秋天的動物園(1994.9.19)</R></td><td>
+        </table>
+        <p></p>
+                  
+  </div>  
+  <div class="card-body">
     <h5 class="card-title">經歷</h5>
     <p class="card-text">
                   <table class="table">
@@ -34,7 +43,14 @@
     <Tr><td>教育部高中資訊科技概論教科書審定委員(2006.8~2017.12)</td></Tr>    	 		
     <Tr><td>臺北市自由軟體桌面應用推動及發展小組輔導員(2008.4~2016.12)</td></Tr> 	
     <Tr><td>臺北市智慧教育輔導小組高中組輔導員(2019.8~迄今)</td></Tr> 
-    <Tr><td>108新課綱翰林版國中資訊科技教科書共同作者(2017.8~迄今)</td></Tr>     	    
+    <Tr><td>108新課綱翰林版國中資訊科技教科書共同作者(2017.8~迄今)<BR>
+      <a href="https://www.facebook.com/rongguey.ho/posts/842339086132944" target="_blank">國七上</a>
+      <a href="https://www.facebook.com/rongguey.ho/posts/1009421859424665" target="_blank">國七下</a>
+      <a href="https://www.facebook.com/rongguey.ho/posts/1139357006431149" target="_blank">國八上</a>
+      <a href="https://www.facebook.com/rongguey.ho/posts/1186862831680566" target="_blank">國八下</a>
+      <a href="https://www.facebook.com/rongguey.ho/posts/1428271777539669" target="_blank">國九上</a>
+      <a href="https://www.facebook.com/rongguey.ho/posts/1492825151084331" target="_blank">國九下</a>                              
+    </td></Tr>     	    
   </table>
           </td></tr></table>
         </p>                    
@@ -70,6 +86,8 @@
 	<tr><td>程式設計輕鬆學─使用Scratch 2.x。松崗。2016出版。</td></tr>
 	<tr><td>用積木玩程式設計─使用Scratch 2.x，國小用書。松崗。2015出版。</td></tr>
 	<tr><td>程式設計邏輯訓練─使用Scratch。松崗。2013出版</td></tr>	 	
+	<tr><td>網頁設計手冊（上）─網站開發基礎16堂課。五南。2020出版</td></tr>
+	<tr><td>網頁設計手冊（下）─網站開發案例實作。五南。2021出版</td></tr>    
   </Table>
           </td></tr></table>
     </p>
@@ -94,6 +112,14 @@
   </Table> 
           </td></tr></table>
     </p>
-  </div>      
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">專題演講</h5>
+		<table class="table">
+  <tr><td><iframe width="560" height="315" src="https://www.youtube.com/embed/SznJebnBy7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td></tr>         
+  </Table> 
+          </td></tr></table>
+    </p>
+  </div>        
 </div>
 {% endblock %}
