--- a/templates/base.html
+++ b/templates/base.html
@@ -90,13 +90,18 @@ Licence URI: http://www.os-templates.com/template-terms
                <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>
                <li><a href="https://hackmd.io/c/BkoDkoL-E/https%3A%2F%2Fhackmd.io%2Fs%2FHyKsksUZE" target="_blank">南港高中特色課程：使用RaspberryPi</a></li>
                <li><a href="https://hackmd.io/c/BkRE8iUzI/https%3A%2F%2Fhackmd.io%2Fs%2FrJxK8iUM8" target="_blank">南港高中特色課程：使用JetBot</a></li> 
-               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO/https%3A%2F%2Fhackmd.io%2F%40twzO0JCBRaa_Tuaxdh-UBA%2FSy4ZkbOJO" target="_blank">智慧物聯成果展</a></li> 
-               <!--              
-               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/By8ZOj-DI" target="_blank">南港高中特色課程：使用Rabboni</a></li>  
-               -->
+               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO/https%3A%2F%2Fhackmd.io%2F%40twzO0JCBRaa_Tuaxdh-UBA%2FSy4ZkbOJO" target="_blank">智慧物聯成果展</a></li>               
                <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/S1h3k5iov" target="_blank">南港高中特色課程：感測器原理</a></li>              
               </ul>           
-          </li>           
+          </li>      
+          <li><a href="#">南港高中數位科學實驗班成果展</a>
+            <ul>           
+               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/By8ZOj-DI" target="_blank">第一屆智慧感測</a></li>  
+               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO" target="_blank">第二屆智慧物聨</a></li>     
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/Hy2q-J9Pq" target="_blank">第三屆智聨感測</a></li>  
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/rkW0Wk5Pc" target="_blank">第四屆智慧城市</a></li>                                              
+              </ul>           
+          </li>                
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
         </ul>
       </li>
