--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -11,7 +11,7 @@
 </p>
 {% for enroll, shows in classrooms %}
 <div class="card" id="{{enroll.classroom.id}}">
-  <h5 class="card-header">{{enroll.classroom}} ({{enroll.classroom.lesson_choice}})：{{enroll.seat}}號</h5>
+  <h5 class="card-header">{{enroll.classroom}}：{{enroll.seat}}號</h5>
   <div class="card-body">
     <p style="padding:0px; margin:2px;">
 基本資料：
