--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -6,11 +6,11 @@
     {% endif %}
     {% for page in page_numbers %}
         {% if page %}
-            {% ifequal page page_obj.number %}
+            {% if page == page_obj.number %}
       <li class="disabled page-item"><a class="page-link" href="#"><font color="red">{{ page }}</font></a></li>
             {% else %}
                 <li class="page-item"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
-            {% endifequal %}
+            {% endif %}
         {% else %}
              <li class="page-item"><a class="page-link">...</a></li>
         {% endif %}
