improve homepage statistatics performance

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -172,7 +172,7 @@
       <div class="content">
         <h1>在 Joy of Code 上學習</h1>
         {{student}} 個學生在這兒撰寫了 {{works.0}} 個程式，看了 {{works.7.2}} 本書。
-        <!--
+        {% comment %}
         <div id="summary">
           <img src="/static/images/work.png">
           <div style="left:27px; line-height:18px;">
@@ -235,7 +235,7 @@
             <a href="/student/work/list/9" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">x 班次 x位學生<BR>共計 x 個作業</a>
           </div>
         </div>
-        -->
+        {% endcomment %}
       </div>
       <div class="clear"></div>
     </div>
