--- a/templates/student/progress.html
+++ b/templates/student/progress.html
@@ -31,7 +31,7 @@
             {% for assignment, work in bar %}
                 {% if work %}
                     {% if work.score > 0 %}
-            <td style="padding:0px"><button type="button" class="btn btn-info btn-circle">{{work.score}}</button><BR><font size=-2>{{work.publication_date|date:"m/d"}}<BR>{{work.scorer|realname}}</td>
+            <td style="padding:0px"><button type="button" class="btn btn-info btn-circle">{{work.score}}</button><BR><font size=-2>{{work.publication_date|date:"m/d"}}<BR>{{work.scorer.first_name}}</td>
                     {% else %}
             <td style="padding:0px">{% if request.user.id == classroom.teacher_id%}<A target=_blank href="/teacher/scoring/{{typing}}/{{lesson}}/{{classroom.id}}/{{enroll.student.id}}/{{work.index}}">{% endif %}<button type="button" class="btn btn-success btn-circle"></button>{% if request.user.id|is_teacher:classroom.id%}</A>{% endif %}<BR><font size=-2>{{work.publication_date|date:"m/d"}}</font></td>                   
                     {% endif %}
