--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -1,45 +1,53 @@
 {% extends "base.html" %}
-{% load tz %}
 {% load tag %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-<a href="/account/dashboard/0" class="btn btn-info{% if action == '0' %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> 所有訊息</a>
-<a href="/account/dashboard/1" class="btn btn-info{% if action == '1' %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> 課程公告</a>
-<a href="/account/dashboard/2" class="btn btn-info{% if action == '2' %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 我的私訊</a>
-<a href="/account/line/" class="btn btn-info" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 寄出私訊</a>
-<Table class="table">
-{% for messagepoll, message in messages %}<Tr><td>
- <button class="btn btn-default">
-{{ message.time| date:"Y/m/d H:i"}}
-  </button>
-{% if message.url %}
-<a href="/account/message/{{ messagepoll.id }}">
-{% else %}
-<a href="/account/line/detail/0/{{ message.id }}">
-{% endif %}
-{% if message.type == 2 %}
-<img src="/static/images/line.png">
-{% elif message.type == 1 %}
-<img src="/static/images/announce.png">
-{% elif message.type == 3 %}
-<img src="/static/images/system.png">
-{% endif %}
-{{ message.title}}
-{% if message.title|img == "assistant"%}
-<img src="/static/images/assistant.png">
-{% elif message.title|img == "teacher" %}
-<img src="/static/images/teacher.png">
-{% elif message.title|img == "certificate" %}
-<img src="/static/images/certificate.png">
-{% endif %}
-</a>
+<div id="btn-toolbar" class="btn-group mb-3">
+  <a href="/account/dashboard/0" class="btn btn-info{% if action == 0 %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> 所有訊息</a>
+  <a href="/account/dashboard/1" class="btn btn-info{% if action == 1 %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> 課程公告</a>
+  <a href="/account/dashboard/2" class="btn btn-info{% if action == 2 %} active{% endif %}" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 我的私訊</a>
+  <a href="/account/line/" class="btn btn-info" role="btn"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 寄出私訊</a>
+</div>
+<ul id="message-list" class="list-group mb-3">
+  {% for messagepoll in messages %}
+  <li class="list-group-item">
+    <span class="badge badge-secondary">
+      {{ messagepoll.message.time| date:"Y/m/d H:i"}}
+    </span>
+    
+    {% if messagepoll.message.url %}
+      <a href="/account/message/{{ messagepoll.id }}">
+    {% else %}
+      <a href="/account/line/detail/0/{{ messagepoll.message_id }}">
+    {% endif %}
+    
+    {% if messagepoll.message.type == 2 %}
+    <img src="/static/images/line.png">
+    {% elif messagepoll.message.type == 1 %}
+    <img src="/static/images/announce.png">
+    {% elif messagepoll.message.type == 3 %}
+    <img src="/static/images/system.png">
+    {% endif %}
+    
+    {{ messagepoll.message.title}}
+    
+    {% if messagepoll.message.title|img == "assistant"%}
+      <img src="/static/images/assistant.png">
+    {% elif messagepoll.message.title|img == "teacher" %}
+      <img src="/static/images/teacher.png">
+    {% elif messagepoll.message.title|img == "certificate" %}
+      <img src="/static/images/certificate.png">
+    {% endif %}
+    </a>
+    
+    {% if not messagepoll.read %}
+      <img src="/static/images/new.gif">
+    {% endif %}
+  </li>
+  {% endfor %}
+</ul>
 
-{% if not messagepoll.read %}
-<img src="/static/images/new.gif">
-{% endif %}
-</Tr>
-{% endfor %}
-</Table>
-        {% load pagination %}
-        {% get_pagination %}         
+{% load pagination %}
+{% get_pagination %}         
+
 {% endblock %}
