--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,18 +1,18 @@
 {% if is_paginated %}
 <div class="pagination-wrapper">
-     <ul class="pagination" style="text-align: center;display:flex;justify-content:center;">
+    <ul class="pagination pagination-sm" style="text-align: center;display:flex;justify-content:center;">
     {% if page_obj.has_previous %}
         <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">上一頁</a></li>
     {% endif %}
     {% for page in page_numbers %}
         {% if page %}
             {% if page == page_obj.number %}
-      <li class="disabled page-item"><a class="page-link" href="#"><font color="red">{{ page }}</font></a></li>
+                <li class="page-item active"><span class="page-link" href="#">{{ page }}</span></li>
             {% else %}
                 <li class="page-item"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
             {% endif %}
         {% else %}
-             <li class="page-item"><a class="page-link">...</a></li>
+            <li class="page-item"><a class="page-link">...</a></li>
         {% endif %}
     {% endfor %}
     {% if page_obj.has_next %}
